2010-08-02  Per Bothner  <per@bothner.com>

	* XMLFilter.java (writeObject): Treat a java.util.List as
	multiple value - just iterate and write each element.

2010-07-05  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (isHtmlOrXhtml): New flag.
	(getHtmlTag): New method.
	(endElement): Re-do logic for handle "empty-elements".

2010-07-01  Per Bothner  <per@bothner.com>

	* XMLPrinter.java: Add space after xml-declaration, if needed.

2007-12-30  Per Bothner  <per@bothner.com>

	* XMLParser.java: Add support for XML 'standalone' declaration.

2007-01-20  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (setStyle): If html, pre-establish html namespace.

2007-01-16  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (mustHexEscape): New method.
	(write(int)): Use it.
	(write(String,int,int), write(char[],int,int)): Likewise.

	* XMLPrinter.java (write): Always escape U+00x85 and U+2028
	not just in attributes.

2007-01-14  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (script): New flag.
	(error): New method.
	(startAttribute): Call error if string and ! inStartTag.

	* XMLPrinter.java (write): Also escape U+00x85 and U+2028 in attributes.

	* XName.java (isNameStart): Use Character.isUnicodeIdentifierStart.
	(checkName): New static method.
	(isNmToken, isName(String), isNCName): New methods.
	(isName(String,boolean)): Remove method.
	* XMLFilter.java (writeProcessingInstruction): Update to use isNCName.

	* XMLFilter.java (writeProcessingInstruction): Collapse whitespace
	in target.

2007-01-11  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (startElement): Check for undeclare-namespaces
	in node's namespaceBindings, and ignore if undeclareNamespaces.

2007-01-04  Per Bothner  <per@bothner.com>

	* NodeTree.java (baseUriOfPos): Change return type to Path.
	Use Path methods rather than URI_utils.
	Swap local variable names base and uri to be less confusing.

2007-01-02  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (<init>): Update to take Path.